# diffodil

./: .gitignore  .treefmt.toml  Cargo.toml  README.md  eslint.config.js  index.html  justfile  package.json  pyproject.toml  vite.config.ts
.github/workflows/: release.yml
.pixi/: envs
frontend/src/: App.css  App.tsx  Git.tsx  Utils.tsx  WebSocket.tsx  index.css  main.tsx
src/: git.rs  main.rs  messages.rs  server.rs  service.rs
src/diffodil/: __init__.py  cli.py  git.py  git_test.py  server.py  utils.py
src/diffodil/statics/: index.html
src/diffodil/statics/assets/: index-BXaF8Fmi.css  index-B_IAjx44.js  index-BdIJlaTL.js  index-ByThDALd.js  index-C5rcc1TP.css  index-Cs49es_K.js  index-CtNLcBXU.js  index-CzHDTCHq.js  index-DI8vAl7V.css  index-Da-FDDqc.js  index-DujZTnlE.js  index-ipuw7f3Q.js  index-sK5dxq4H.css
